# arena-nav-prediction

./: CMakeLists.txt  README.md  flatland_navpred.launch  package.xml  robot_navpred.launch  start_arena_navpred.launch  task_generator_navpred.launch
data-recorder/: README.md  data_recorder_node.py  get_metrics.py  utils.py
datasets/5_performance_metrics/: base_data_set.csv
datasets/5_performance_metrics/crowdnav/: crowdnav.csv
datasets/5_performance_metrics/dwa/: dwa.csv
datasets/5_performance_metrics/rlca/: rlca.csv
datasets/7_performance_metrics/: dnn_input_crowdnav_rlca_new_metric.csv
datasets/yaml_example/map-8737f0d7-2836-42e4-96fa-0fd38f4e6ac2/: map-8737f0d7-2836-42e4-96fa-0fd38f4e6ac2_map_metrics.yml  map-8737f0d7-2836-42e4-96fa-0fd38f4e6ac2_performance_metrics.yml  map-8737f0d7-2836-42e4-96fa-0fd38f4e6ac2_robot_metrics.yml
documentation/: CreateAverages_documentation.md  Pipeline_Arguments.md  evaluation_run_guide.md
pipelines/alternative/: .gitignore  filter.py  gan.py  pipeline_script.py  test.py  world_complexity.py
pipelines/original/: .gitignore  README.md  collect_records.py  createAverage.py  data_preparation_script.py  data_transformation.py  distance_between.py  pipeline_script_ver2.py  requirements.txt  world_complexity.py
pipelines/original/CsvMerger/: CsvMerger.py
task-generator/: README.md
task-generator/scripts/: task_generator_node.py
task-generator/task_generator_navpred/: constants.py
task-generator/task_generator_navpred/environments/: flatland_environment.py  flatland_navpred_environment.py  gazebo_environment.py
(+21 files in other folders)
