<?xml version="1.0"?>
<package format="2">
  <name>navpred-data-recorder</name>
  <version>0.0.0</version>
  <description>navpred-data-recorder</description>

  <maintainer email="r.sosamelo@gmail.com">Ricardo Sosa Melo</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
